objects/Opportunity_Correspondence__c.object
<CustomObject>
    <fields>
        <fullName>Autocreate_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autocreate Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autosend_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autosend Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Old_Org__c</fullName>
        <label>Created Date Old Org</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_Period__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Zeit bis Wiedervorlage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KorrOppImpID__c</fullName>
        <description>Import ID</description>
        <externalId>true</externalId>
        <label>KorrOppImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Korrespondenz_ID__c</fullName>
        <label>Old Korrespondenz ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Anfrage</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Korrespondenz</relationshipLabel>
        <relationshipName>Opportunity_Correspondencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Opportunity_Correspondence_Partners</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Mail_TemplateID__c</fullName>
        <description>Do not set this manually! Used by code to sent a email on opportunity correspondence creation.</description>
        <inlineHelpText>DO NOT USE THIS FIELD MANUALLY.</inlineHelpText>
        <label>Send Mail TemplateID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Opportunity_Correspondence_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Frist</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text_Modules__c</fullName>
        <label>Textbausteine</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Opportunity_Correspondence_Text_Modules</valueSetName>
        </valueSet>
    </fields>
    <label>Korrespondenz</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Korrespondenzen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Date__c</columns>
        <columns>Partner__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Dieselskandal</fullName>
        <active>true</active>
        <label>Dieselskandal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finanzierung</fullName>
        <active>true</active>
        <label>Finanzierung</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lebensversicherung</fullName>
        <active>true</active>
        <label>Lebensversicherung</label>
    </recordTypes>
</CustomObject>